[package]
name = "prom_the_reaper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
arc-swap = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["compression-gzip"] }
clap = { version = "4", features = ["derive"] }
bytes = "1"
flate2 = "1"
reqwest = { version = "0.12", features = ["gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
axum-test = "17"
flate2 = "1"
serde_json = "1"
